<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="bottom"
    android:paddingBottom="10dp">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/card_color"
        android:textColor="@color/white"
        android:text="@string/remove_ads_for_24hrs"
        android:id="@+id/removeAds"
        android:layout_above="@id/donate"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/card_color"
        android:textColor="@color/white"
        android:text="@string/donate"
        android:id="@+id/donate"
        android:layout_above="@id/logout"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/card_color"
        android:textColor="@color/white"
        android:text="@string/logout"
        android:id="@+id/logout"
        android:layout_alignParentBottom="true"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/splashscreen"
        android:layout_above="@id/removeAds"
        android:contentDescription="@string/app_name"/>

</RelativeLayout>