<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:id="@+id/container"
    android:gravity="center">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/card_color"
        app:cardElevation="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/donate_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donate_to_any_of_the_following_addresses"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                style="@style/Base.TextAppearance.AppCompat.Body1"/>

            <TextView
                android:id="@+id/ETH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eth"
                android:textColor="@color/white"
                android:layout_gravity="start"
                android:layout_margin="10dp"
                style="@style/Base.TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/ETHaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ETH_Address"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                style="@style/Base.TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/BTC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btc"
                android:textColor="@color/white"
                android:layout_gravity="start"
                android:layout_margin="10dp"
                style="@style/Base.TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/BTCAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btc_address"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                style="@style/Base.TextAppearance.AppCompat.Medium"/>




        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
