<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_color"
    app:cardElevation="25dp"
    app:cardBackgroundColor="@color/card_color"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currency_details"
            android:textColor="@color/heading_color"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="30dp"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_above="@id/column1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/column1"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/algorithm"
                android:textColor="@color/heading_color"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/proof_type"
                android:textColor="@color/heading_color"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/current_block_number"
                android:textColor="@color/heading_color"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/block_reward"
                android:textColor="@color/heading_color"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/price_high"
                android:textColor="@color/heading_color"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/price_low"
                android:textColor="@color/heading_color"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/price_open"
                android:textColor="@color/heading_color"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/volume"
                android:textColor="@color/heading_color"
                android:layout_marginTop="10dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/column2"
            android:layout_toRightOf="@id/column1"
            android:layout_alignParentEnd="true"
            android:gravity="right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/card_text"
                android:layout_marginTop="10dp"
                android:id="@+id/algorithm"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/card_text"
                android:layout_marginTop="10dp"
                android:id="@+id/proof_type"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/card_text"
                android:layout_marginTop="10dp"
                android:id="@+id/current_block"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/card_text"
                android:layout_marginTop="10dp"
                android:id="@+id/block_reward" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/card_text"
                android:layout_marginTop="10dp"
                android:id="@+id/price_high"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/card_text"
                android:layout_marginTop="10dp"
                android:id="@+id/price_low"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/card_text"
                android:layout_marginTop="10dp"
                android:id="@+id/price_open"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/card_text"
                android:layout_marginTop="10dp"
                android:id="@+id/price_volume"/>

        </LinearLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>
