<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:id="@+id/container"
    android:gravity="center">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/card_color"
        app:cardElevation="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/alertHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_sign_up_to_add_favorites"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                style="@style/Base.TextAppearance.AppCompat.Medium"/>

            <EditText
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/negative_red"
                android:backgroundTint="@color/white"
                android:layout_margin="10dp"
                android:textColor="@color/negative_red"/>

            <EditText
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/negative_red"
                android:backgroundTint="@color/white"
                android:layout_margin="10dp"
                android:textColor="@color/negative_red"/>

            <Button
                android:id="@+id/signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/negative_red"
                android:layout_margin="10dp"
                android:text="Go!"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/switchview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textSize="12sp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
