<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/card_color"
    app:cardElevation="25dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@android:color/transparent"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_24_hr_high"
                android:textSize="12sp"
                android:textColor="@color/heading_color"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$21.00"
                android:textSize="15sp"
                android:textColor="@color/white"

                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent"
                android:id="@+id/high"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_24_hr_low"
                android:textSize="12sp"
                android:textColor="@color/heading_color"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$21.00"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent"
                android:id="@+id/low"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_24hrvolume"
                android:textSize="12sp"
                android:textColor="@color/heading_color"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$21.00"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent"
                android:id="@+id/volume"/>



        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@android:color/transparent"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/heading_color"
                android:textSize="15sp"
                android:text="@string/market_pressure"
                android:gravity="center_horizontal"
                android:id="@+id/title"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:textColor="@color/positive"
                android:id="@+id/fearOrGreed"
                android:layout_centerInParent="true"
                />


        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>