<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    app:cardElevation="25dp"
    app:cardBackgroundColor="@color/card_color">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/heading_color"
            android:text="@string/socialmediaactivity"
            android:textSize="15sp"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="8dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/twitterActivity"
                android:layout_gravity="center_vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_twitter"
                        android:id="@+id/twitterImage"
                        android:layout_marginRight="10dp"/>

                    <TextView
                        android:id="@+id/twitterSocialActivity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textColor="@color/heading_color"
                        android:text="@string/def"
                        android:layout_marginLeft="5dp"/>
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/redditActivity">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_reddit"
                    android:id="@+id/redditImage"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:id="@+id/redditSocialActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/heading_color"
                    android:text="@string/def"
                    android:layout_marginLeft="5dp"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/heading_color"
            android:text="@string/social_media_sentiment_breakdown"
            android:textSize="15sp"
            android:layout_margin="10dp"/>

        <include layout="@layout/sentiment_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>

    </LinearLayout>


</android.support.v7.widget.CardView>